components/converter-form/converter.module.scss
.FormWrap {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;

  @media screen and (max-width: 767px) {
    flex-flow: column;
  }
}

.FormControl {
  display: inline-flex;
  justify-content: center;
  align-items: baseline;
}

.FormOutput {
  font-weight: 500;
  font-size: inherit;
  padding-bottom: 5px;
}

.FormGroup {
  display: inline-flex;
  align-items: baseline;
  font-size: 60px;

  @media screen and (max-width: 767px) {
    font-size: 30px;
  }
}

.Arrow {
  margin: 20px;
}

.Preloader {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-weight: 600;
  font-family: inherit;
}

.PreloaderWrap {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 64px;
  height: 64px;
  margin-bottom: 30px;

  &::before {
    content: '';
    position: absolute;
    display: block;
    border: 2px solid currentColor;
    border-radius: 100%;
    width: 100%;
    height: 100%;
    border-bottom-color: transparent;
    animation: Spin 2s linear infinite;
    will-change: transform;
  }
}


@keyframes Spin {
  from {
    transform: rotateZ(0)
  }
  to {
    transform: rotateZ(360deg)
  }
}

